--- a/affiliate.html
+++ b/affiliate.html
@@ -43,7 +43,7 @@
     <section id="affiliate-cover-img" class="position-relative">
         <div class="cover-wrap ">
             <div class="bg-image d-flex align-items-center ">
-                <img class="vw-100 h-100 object-fit-cover" src="/image/affiliate/affiliate-top-banner.jpg" alt="...">
+                <img class="vw-100 h-100 object-fit-cover" src="image/affiliate/affiliate-top-banner.jpg" alt="...">
             </div>
         </div>
     </section>
@@ -65,7 +65,7 @@
             <div class="support-wrapping d-flex justify-content-evenly">
                 <div class="support ">
                     <div class="card border-0">
-                        <div class="text-center"><img src="/image/affiliate/payment.jpg" class="card-img-top" alt="..."></div>
+                        <div class="text-center"><img src="image/affiliate/payment.jpg" class="card-img-top" alt="..."></div>
                         <div class="card-body">
                             <h5 class="card-title text-center title-style">Automated Payment</h5>
                             <p class="card-text text-center text-style"><small>Some quick example text to build on the card title.</small></p>
@@ -105,7 +105,7 @@
             <div class="join-wrapping">
                 <div class="row pt-md-2 row-cols-1 row-cols-sm-2">
                     <div class="col "  >
-                        <div class="d-flex align-items-center" style="height: 100%;"><img src="/image/affiliate/join.png" class="img-fluid p-2 p-sm-0" alt="..."></div>
+                        <div class="d-flex align-items-center" style="height: 100%;"><img src="image/affiliate/join.png" class="img-fluid p-2 p-sm-0" alt="..."></div>
                     </div>
                     <div class="col">
                         <div class="d-flex align-items-center" style="height: 100%;">
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="col order-1 order-sm-2 ">
-                        <div class="d-block align-items-center " style="height: 100%;"><img src="/image/affiliate/promote.png" class="img-fluid p-2 p-sm-0 float-end "></div>
+                        <div class="d-block align-items-center " style="height: 100%;"><img src="image/affiliate/promote.png" class="img-fluid p-2 p-sm-0 float-end "></div>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
             <div class="earn-wrapping">
                 <div class="row  row-cols-1 row-cols-sm-2">
                     <div class="col">
-                        <div class="d-flex align-items-center" style="height: 100%;"> <img src="/image/affiliate/earn.png" class="img-fluid p-2 p-sm-0"></div>
+                        <div class="d-flex align-items-center" style="height: 100%;"> <img src="image/affiliate/earn.png" class="img-fluid p-2 p-sm-0"></div>
                         
                     </div>
                     <div class="col">
@@ -174,7 +174,7 @@
                     <div class="col">
                         <div class=" ">
                             <div class="card border-0 text-bg-dark">
-                                <img src="/image/affiliate/community-cover.jpg" class="card-img" alt="...">
+                                <img src="image/affiliate/community-cover.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay mt-1">
                                   <h3 class="card-title title-style pb-1 mt-sm-3 pt-md-2 mt-lg-0">Affiliate Community</h3>
                                   <p class="card-text text-style mt-4 mt-sm-5 mt-lg-2">With supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -261,7 +261,7 @@
                 <div class="row levels row-cols-2 row-cols-lg-3 g-3 ">
                     <div class="col">
                         <div class="card box-shadow border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 01</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
@@ -271,7 +271,7 @@
 
                     <div class="col">
                         <div class="card border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 02</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
@@ -281,7 +281,7 @@
 
                     <div class="col">
                         <div class="card border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 03</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
@@ -291,7 +291,7 @@
 
                     <div class="col">
                         <div class="card border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 04</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
@@ -301,7 +301,7 @@
 
                     <div class="col">
                         <div class="card border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 05</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
@@ -311,7 +311,7 @@
 
                     <div class="col">
                         <div class="card border-0">
-                            <img src="/image/affiliate/level-01.jpg" class="card-img-top" alt="...">
+                            <img src="image/affiliate/level-01.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <div class="card-title title-style"><h5>Level - 06</h5></div>
                                 <div class="card-text text-style"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae optio dolorem?</p></div>
