single product page responsived & added

--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                   <button id="show-modal" onclick="openPopup()" class=" rounded-pill button border-0">Search Here</button>
                 </div>
 
-                <div id="listing-menu" class="listing-menu  z-3 ">
+                <div id="listing-menu" class="listing-menu   ">
                   <div >
-                    <ul class="list-main-menu  row g-2  row-cols-2 row-cols-md-3 z-3 ">
+                    <ul class="list-main-menu z-1 row g-2  row-cols-2 row-cols-md-3 z-3 ">
                       <li class="list-btn col text-center  rounded-pill px-3 py-1"><a href="#"><i class="fa-solid fa-house pe-2"></i>Real State</a></li>
                       <li class="list-btn col text-center  rounded-pill px-3 py-1"><a href="#"><i class="fa-solid fa-dumbbell pe-2"></i>Yoga</a></li>
                       <li class="list-btn col text-center  rounded-pill px-3 py-1"><a href="#"><i class="fa-solid fa-heart-pulse pe-2"></i>Health Care</a>
-                        <ul class="list-sub-menu z-3 d-md-flex position-absolute justify-content-between p-3 ps-4 rounded shadow-sm" style="max-width: 1296px;">
+                        <ul class="list-sub-menu z-2 d-md-flex  justify-content-between align-items-center p-3 ps-4 rounded shadow-sm" >
                           <li><a href="#"><span class="sub-menu-title"><i class="fa-solid fa-square-h"></i>Hospital</span></a>
-                            <ul class="list-menu-name p-2 rounded shadow-sm">
+                            <ul class="list-menu-name z-3 p-2 rounded shadow-sm">
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Eye Hospital</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Cancer Hospital</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Kidney Hospital</a></li>
@@ -108,7 +108,7 @@
                             
                           </li>
                           <li class="pt-2"><a href="#"><span class="sub-menu-title "><i class="fa-solid fa-flask"></i>Diagnostic</span></a>
-                            <ul class="list-menu-name p-2 rounded shadow-sm">
+                            <ul class="list-menu-name z-3 p-2 rounded shadow-sm">
                               <li class=""><a href="#"><i class="fa-solid fa-minus"></i>Diagnostic 01</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Diagnostic 02</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Kidney Hospital</a></li>
@@ -123,7 +123,7 @@
                             </ul>
                           </li>
                           <li class="pt-2"><a href="#"><span class="sub-menu-title"><i class="fa-solid fa-prescription-bottle-medical"></i>Pharmecy</span></a>
-                            <ul class="list-menu-name p-2 rounded shadow-sm">
+                            <ul class="list-menu-name z-3 p-2 rounded shadow-sm">
                               <li class=""><a href="#"><i class="fa-solid fa-minus"></i>Pharmecy 01</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Pharmecy 02</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Kidney Hospital</a></li>
@@ -138,8 +138,8 @@
                             </ul>
                             
                           </li>
-                          <li class="pt-2" ><a href="#"><span class="sub-menu-title"><i class="fa-solid fa-stethoscope"></i>Accesories</span></a>
-                            <ul class="list-menu-name p-2 rounded shadow-sm">
+                          <li class="pt-2 " ><a href="#"><span class="sub-menu-title"><i class="fa-solid fa-stethoscope"></i>Accesories</span></a>
+                            <ul class="list-menu-name z-3 p-2 rounded shadow-sm">
                               <li class=""><a href="#"><i class="fa-solid fa-minus"></i>Accesories 01</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Accesories 02</a></li>
                               <li><a href="#"><i class="fa-solid fa-minus"></i>Kidney Hospital</a></li>
