index file list ctg responsived

--- a/passReset.html
+++ b/passReset.html
@@ -46,7 +46,7 @@
                                             </div>
                                             
                                             <div class="text-center"><div type="submit" class="button  py-2 rounded-pill mt-5">Get Reset</div></div>
-                                            <p class="mt-3 text-center else-sign"><small>Return to <a href="signup.html" class="ms-1">Sign In!</a></small></p>
+                                            <p class="mt-3 text-center else-sign"><small>Return to <a href="singin.html" class="ms-1">Sign In!</a></small></p>
                                         </form>
                                     </div>
                                 </div>
