sign and index file some update

--- a/passReset.html
+++ b/passReset.html
@@ -24,11 +24,12 @@
                         <div class="row ">
                             <div class="col col-left">
                                 <div class="signup-txt d-flex justify-content-center align-items-center">
-                                    
+                                    <div>
+                                        <div><img src="image/logo-light.png" alt=""></div>
                                     <div>
                                         <h1>Don't Worry!</h1>
                                         <p class="mt-4 ">We are here help you to recover your password.<br>Explore the top rated products & verified suppliers in the world.</p>
-    
+                                    </div>
                                     </div>
                                 </div>
                             </div>
