--- a/signup.html
+++ b/signup.html
@@ -26,9 +26,11 @@
                                 <div class="signup-txt d-flex justify-content-center align-items-center">
                                     
                                     <div>
+                                        <div><img src="image/logo-light.png" alt=""></div>
+                                    <div>
                                         <h1>Looks like you're new here!</h1>
                                         <p class="mt-4">Sign up with your detail to get started.<br>Explore the top rated products & verified suppliers in the world.</p>
-    
+                                    </div>
                                     </div>
                                 </div>
                             </div>
