--- a/shopping.html
+++ b/shopping.html
@@ -30,7 +30,7 @@
                     <li class="nav-item mx-auto"><a href="shopping.html" class="nav-link">Shopping</a></li>
                     <li class="nav-item mx-auto"><a href="#" class="nav-link">Favorites</a></li>
                     <li class="nav-item mx-auto"><a href="#" class="nav-link">Cart</a></li>
-                    <li class="nav-item mx-auto me-2"><a href="#" class="nav-link"><i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>Sign In</a></li>
+                    <li class="nav-item mx-auto me-2"><a href="singin.html" class="nav-link"><i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>Sign In</a></li>
                     <li class="nav-item mx-auto "><div class="add-listing button-outline rounded-pill p-0"><a href="#" class="nav-link px-4">Add Listing<i class="fa-solid fa-plus ms-2 border rounded-circle "></i></a></div></li>
                 </ul>
             </div>
