--- a/listing.html
+++ b/listing.html
@@ -112,7 +112,7 @@
                         <div class="row mt-2">
                             <div class="col">
                                 <div class="heading-sub-title d-flex justify-content-between">
-                                    <div class=""><p>Top Rated & Verified Supplers in the World</p></div>
+                                    <div class="mb-3"><p>Top Rated & Verified Supplers in the World</p></div>
                                     <div class="sort-btn">
                                         <div class="dropdown">
                                             <button class="btn border-0 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -524,7 +524,7 @@
                     </div>
                     <!--filter-->
                     <div class="filter-right col  col-md-3">
-                        <div class="d-flex justify-content-end heading-sub-title mt-2"><h6>Filter</h6></div>
+                        <div class="d-flex justify-content-end heading-sub-title mb-3 mt-2"><h6>Filter</h6></div>
                         <div class="filter ">
                             
                             <div class=" mb-3">
