shopping page category responsived

--- a/shopping.html
+++ b/shopping.html
@@ -34,7 +34,7 @@
                     <li class="nav-item mx-auto"><a href="shopping.html" class="nav-link">Shopping</a></li>
                     <li class="nav-item mx-auto"><a href="#" class="nav-link">Favorites</a></li>
                     <li class="nav-item mx-auto"><a href="#" class="nav-link">Cart</a></li>
-                    <li class="nav-item mx-auto me-2"><a href="singin.html" class="nav-link"><i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>Sign In</a></li>
+                    <li class="nav-item mx-auto "><a href="singin.html" class="nav-link"><i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>Sign In</a></li>
                     <li class="nav-item mx-auto "><div class="add-listing button-outline rounded-pill p-0"><a href="#" class="nav-link px-4">Add Listing<i class="fa-solid fa-plus ms-2 border rounded-circle "></i></a></div></li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
   <main> 
    
     <!--find category start-->
-    <section id="find-category">
+    <!-- <section id="find-category">
         <div class="container">
             <div class="find-category-wrapping d-flex justify-content-between">
                 <div class="category-left box-shadow rounded">
@@ -206,6 +206,216 @@
         </div>
 
     </section>
+ -->
+
+
+
+
+    <section id="find-category">
+      <div class="container">
+          <div class="find-category-wrapping ">
+            <div class="row row-cols-1 row-cols-lg-2 gx-xl-5">
+              <div class="col-8 col-md-6 col-lg-3 order-2 order-lg-1 col-xl-4">
+                  <div id="all-category" class="category-left border rounded">
+                      <div class="category-title rounded-top ">
+                        <div class="py-2"><i class="fa-solid fa-bars"></i>All Categories</div>
+                      </div>
+                      <div class="category-item">
+                          <ul class="main-category pt-3">
+                              <li><a href="#"><i class="fa-solid fa-minus"></i></i>Fashion</a>
+                                  <ul class="sub-category rounded border">
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                      <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                  </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Beauty</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Lifestyle</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Electronix</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a>
+                                <ul class="sub-category rounded border">
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Hardware</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Daily Needs</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Health Care</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Groceries</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Kids Item</a></li>
+                                  <li><a href="#"><i class="fa-solid fa-minus"></i>Home Decor</a></li>
+                                </ul>
+                              </li>
+                          </ul>
+
+                          <div class="see-more  d-flex justify-content-between"><small>See more</small> <small  onclick="ctgClose()" class="ctg-close-btn rounded-1 "><i class="fa-solid fa-xmark"></i></small></div>
+
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-lg-9 col-xl-8 order-1 order-lg-2">
+                <div class="cover-wrap rounded">
+                  <div class="d-flex search-wrap justify-content-center align-items-md-center">
+                      <div class="search ">
+                        <div class="search-title ">
+                            <div class="text-md-center fs-5 "><h1>Find Genuine Products Near You!</h1></div>
+                            <div class="text-center mt-md-3"><h4>Explore Top Rated & Verified Suppliers and more</h4></div>
+                        </div>
+  
+                        <div id="search-box" class="search-box rounded  p-2 mt-4 mt-md-5">
+                            <div class="row gy-2 row-cols-">
+                              <div class="search-key col-md-4 col-lg-3 col-xl-4  ms-md-2 ">
+                                <input type="search" placeholder="search here -" class="form-control  ">
+                              </div>
+                              <div class="search-city col ">
+                                <select class="form-select 0" aria-label="Default select example">
+                                  <option selected>All City</option>
+                                  <option value="1">Dhaka</option>
+                                  <option value="2">Sylhet</option>
+                                  <option value="3">Delli</option>
+                                </select>
+                              </div>
+                              <div class="search-category  col-md-3">
+                                <select class="form-select " aria-label="Default select example">
+                                  <option selected>All Category</option>
+                                  <option value="1">Resturent</option>
+                                  <option value="2">Hospital</option>
+                                  <option value="3">Picnic Spot</option>
+                                </select>
+                              </div>
+                              <div class="search-btn col text-center ">
+                                  <button onclick="closePopup()" class="button float-md-end border-0 px-md-4 px-xl-4 px-3  me-md-2">search</button>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+  
+                  <div class="all-ctg-btn text-center ">
+                    <button  onclick="showCtg()" class=" rounded-pill button border-0"><i class="fa-solid fa-bars me-2"></i>All Categories</button>
+                  </div>
+  
+                  
+                </div>
+              </div>
+
+          </div>
+
+              
+
+          </div>
+      </div>
+
+  </section>
     <!--find category end-->
 
     <!--top categories start-->
@@ -277,7 +487,7 @@
     <!--top categories end-->
 
     <!--trending products start-->
-    <section id="trend-products">
+    <section id="trend-products" class="">
         <div class="container">
             <div class="products-wrapping">
                 <div class="section-heading ">
@@ -288,7 +498,7 @@
                 <div class="see-more mt-md-3 text-end"><small>See more</small></div>
 
                 <div class="product-list">
-                  <div class="row row-cols-2 row-cols-lg-4 g-3 g-md-4">
+                  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-3 g-md-4">
   
                     <div class="product-card  col">
                       <div class="card border-0 box-shadow">
@@ -853,13 +1063,13 @@
         dots: true
       }
     },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    },
+    // {
+    //   breakpoint: 600,
+    //   settings: {
+    //     slidesToShow: 1,
+    //     slidesToScroll: 1
+    //   }
+    // },
     {
       breakpoint: 576,
       settings: {
@@ -884,7 +1094,7 @@
     {
       breakpoint: 1200,
       settings: {
-        slidesToShow: 6,
+        slidesToShow: 5,
         slidesToScroll: 1
       }
     }
