--- a/shipping.html
+++ b/shipping.html
@@ -92,6 +92,53 @@
       </div>
     </section>
 
+    <section class="login-form pt-3">
+      <div class="container d-flex justify-content-center">
+        <div class="login-form-wrap p-3 mb-4 rounded">
+          <div class="accordion p-1" id="login-data">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#login-info" aria-expanded="false" aria-controls="login-info">
+                  <i class="fa-solid fa-user me-2"></i>Click here to Log In!
+                </button>
+              </h2>
+              <div id="login-info" class="accordion-collapse collapse" data-bs-parent="#login-data">
+                <div class="accordion-body">
+                  <form>
+                    
+
+                    <div class="mb-3 row ">
+                        <div class="col">
+                          <label for="mail" class="form-label">Email<span class="required text-danger">*</span></label>
+                          <input type="email" class="form-control" id="mail" placeholder="mail address" aria-describedby="mailHelp" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row ">
+                        <div class="col">
+                          <label for="pass-dig" class="form-label">Password<span class="required text-danger">*</span></label>
+                          <input type="password" class="form-control" id="pass-dig" placeholder="Password" aria-describedby="passHelp" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 form-check d-flex justify-content-between">
+                      <div><input type="checkbox" class="form-check-input" id="new-acnt" required>
+                        <label class="form-check-label" for="new-acnt"><small>Remind Me</small></label>
+                        </div>
+                      <span><a href="#" class="terms-link">Forgot Passward?</a></span>
+                    </div>
+
+                    <div class="cart-action d-flex justify-content-center mt-5 mb-4">
+                      <button class="continue button px-5 border-0" type="submit">Log In</button>
+                    </div>
+                    
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="shipping" class=" shipping">
         <div class="container d-flex justify-content-center">
             <div class="ship-wrap">
@@ -149,8 +196,8 @@
                                 </div>
                             </div>
                             <div class="mb-3 form-check d-flex justify-content-between">
-                              <div><input type="checkbox" class="form-check-input" id="read-agr" required>
-                                <label class="form-check-label" for="read-agr"><small>Yes, Read & Agree.</small></label>
+                              <div><input type="checkbox" class="form-check-input" id="new-acnt" required>
+                                <label class="form-check-label" for="new-acnt"><small>Create New Account</small></label>
                                 </div>
                               <span><a href="#" class="terms-link">Terms & Conditions<small><i class="fa-solid fa-arrow-up-right-from-square ms-2"></i></small></a></span>
                             </div>
