--- a/shipping.html
+++ b/shipping.html
@@ -141,7 +141,7 @@
 
     <section id="shipping" class=" shipping">
         <div class="container d-flex justify-content-center">
-            <div class="ship-wrap">
+            <div class="ship-wrap px-3">
                 <div class="row shipping-form rounded p-3 pb-0">
                     <div class="col">
                         <form>
@@ -172,8 +172,8 @@
                                   <input type="password" class="form-control" id="pass-dig" placeholder="Password" aria-describedby="passHelp" required>
                                 </div>
                                 <div class="col">
-                                  <label for="post-code" class="form-label">Post Code</label>
-                                  <input type="text" class="form-control" id="post-code" placeholder="Postal code" aria-describedby="nameHelp">
+                                  <label for="zip-code" class="form-label">ZIP</label>
+                                  <input type="text" class="form-control" id="zip-code" placeholder="zip code" aria-describedby="nameHelp">
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -192,7 +192,7 @@
                                         <option value="1">Bangladesh</option>
                                         <option value="2">India</option>
                                         <!-- <option value="3">Three</option> -->
-                                      </select>
+                                    </select>
                                 </div>
                             </div>
                             <div class="mb-3 form-check d-flex justify-content-between">
@@ -204,7 +204,7 @@
 
                             <div class="cart-action d-flex justify-content-between mt-5 mb-4">
                               <div class="return-shop"><a href="myCart.html"><i class="fa-solid fa-arrow-left-long me-2"></i>Return to MyCart</a></div>
-                              <div ><a href="payment.html"><button class="continue button border-0" type="submit">Continue to Payment</button></a></div>
+                              <div ><a href="payment.html"><button class="continue button border-0" type="submit">Continue</button></a></div>
                           </div>
                             
                         </form>
