cart pages full responsived

--- a/shipping.html
+++ b/shipping.html
@@ -50,12 +50,12 @@
     <section id="my-cart" class="my-cart">
       <div class="container d-flex justify-content-center">
           <div class="cart-wrap">
-              <div class="cart-step d-flex justify-content-around  ">
+              <div class="cart-step d-flex  justify-content-around  ">
                   <div class="">
                       <div class="card border-0">
-                          <div class="text-center "><i class="fa-solid fa-cart-plus"></i></div>
+                          <div class="text-center "><i class="fa-solid fa-cart-plus "></i></div>
                           <div class="card-body ">
-                              <h6 class="text-center">My Cart</h6>
+                              <h6 class="text-center"><span>My </span>Cart</h6>
                               <p class="text-center"><small>01</small></p>
                           </div>
                       </div>
@@ -64,7 +64,7 @@
                       <div class="card border-0">
                           <div class="text-center"><i class="fa-solid fa-truck-arrow-right active"></i></div>
                           <div class="card-body ">
-                              <h6>Shipping Info</h6>
+                              <h6>Shipping</h6>
                               <p class="text-center"><small>02</small></p>
                           </div>
                       </div>
@@ -82,7 +82,7 @@
                       <div class="card border-0">
                           <div class="text-center "><i class="fa-solid fa-square-check"></i></div>
                           <div class="card-body ">
-                              <h6>Confirmation</h6>
+                              <h6>Confirm</h6>
                               <p class="text-center"><small>04</small></p>
                           </div>
                       </div>
@@ -217,7 +217,7 @@
    
             </div>
         </div>
-      </section>
+    </section>
     <!--my cart card end-->
 
     <!--footer start-->
