--- a/userProfile.html
+++ b/userProfile.html
@@ -166,7 +166,7 @@
                                         <div class="col-3 col-md-auto">
                                             <label for="from-date" class="col-form-label">From</label>
                                           </div>
-                                          <div class="col-8 col-auto">
+                                          <div class="col-8 col-md-auto">
                                             <input type="date" id="from-date" class="form-control" aria-describedby="fromdHelpInline">
                                         </div>
 
